--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact build",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch -p 5000",
     "lint": "eslint src",
     "test": "jest"
   },
