--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,24 +8,33 @@
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider preact watch -p 5000",
     "lint": "eslint src",
-    "test": "jest"
+    "fix-lint": "eslint --fix src",
+    "test": "jest",
+    "format": "prettier --write .",
+    "unimported": "unimported"
   },
   "eslintConfig": {
-    "extends": "preact",
+    "extends": [
+      "preact",
+      "prettier"
+    ],
     "ignorePatterns": [
       "build/"
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-preact-pure": "^4.0.0",
     "eslint": "^8.30.0",
     "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "^27.0.0",
     "jest-preset-preact": "^4.0.5",
     "preact-cli": "^3.4.2",
+    "prettier": "2.8.7",
     "sirv-cli": "^2.0.2",
-    "cross-env": "^7.0.3"
+    "unimported": "^1.26.0"
   },
   "dependencies": {
     "preact": "^10.11.3",
