--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,35 @@
 version: '3'
 services:
-  mikochi:
-    build: ./backend
+  frontend:
+    build:
+      context: frontend
+      dockerfile: Dockerfile-prod
     ports:
-      - 8080:8080
+      - 5000:5000
+
+  backend:
+    build: ./backend
+    environment:
+      air_wd: "/mikochi"
+      host: "0.0.0.0:4000"
+      data_dir: "/data"
+      jwt_secret: "mikochi_secret_key"
+      username: "root"
+      password: "pass"
+    volumes:
+      - ./data:/data
+    ports:
+      - 4000:4000
+
+  mikochi:
+    image: nginx:1.23.3
+    depends_on:
+      - backend
+      - frontend
+    ports:
+      - 8080:80
+    volumes:
+      - ./nginx-release.conf:/etc/nginx/nginx.conf
 
   dev-frontend:
     build: ./frontend
@@ -24,7 +50,7 @@ services:
       password: "pass"
     volumes:
       - ./backend:/mikochi
-      - ./backend/data:/data
+      - ./data:/data
     ports:
       - 4000:4000
     command: air -c .air.toml
