Fix helm secret/service-frontend

--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -6,6 +6,6 @@ metadata:
     {{- include "Mikochi.labels" . | nindent 4 }}
 type: Opaque
 data:
-  username: {{ .Values.mikochi.username }}
-  password: {{ .Values.mikochi.password }}
-  jwt-secret: {{- include "Mikochi.jwtSecret" . | nindent 6 }}
+  username: {{ .Values.mikochi.username | b64enc }}
+  password: {{ .Values.mikochi.password | b64enc }}
+  jwt-secret: {{ include "Mikochi.jwtSecret" . | b64enc }}
