--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,7 @@ http {
         listen 80;
 
         location /api {
-            proxy_pass http://dev-backend:4000/;
-            rewrite /api/(.*) /$1 break;
+            proxy_pass http://dev-backend:4000;
         }
 
         location / {
