--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -1,7 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "Mikochi.fullname" . -}}
-{{- $backendSvcPort := .Values.serviceBackend.port -}}
-{{- $frontendSvcPort := .Values.serviceFrontend.port -}}
+{{- $svcPort := .Values.service.port -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
@@ -48,26 +47,14 @@ spec:
             pathType: {{ .pathType }}
             {{- end }}
             backend:
-              {{- if eq .backend "backend" }}
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}-backend
+                name: {{ $fullName }}
                 port:
-                  number: {{ $backendSvcPort }}
+                  number: {{ $svcPort }}
               {{- else }}
-              serviceName: {{ $fullName }}-backend
-              servicePort: {{ $backendSvcPort }}
-              {{- end }}
-              {{- else }}
-              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
-              service:
-                name: {{ $fullName }}-frontend
-                port:
-                  number: {{ $frontendSvcPort }}
-              {{- else }}
-              serviceName: {{ $fullName }}-frontend
-              servicePort: {{ $frontendSvcPort }}
-              {{- end }}
+              serviceName: {{ $fullName }}
+              servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
     {{- end }}
