Reset search on home click

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,7 @@
 FROM node:19-alpine
 
-RUN mkdir /app
-COPY package.json /app/
-
 WORKDIR /app
-RUN npm install
 
 EXPOSE 5000
 
-CMD ["npm", "run", "dev"]
+CMD npm install; npm run dev
