Set gin mode according to ENV

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     environment:
       air_wd: "/mikochi"
       HOST: "0.0.0.0:4000"
+      ENV: "development"
     volumes:
       - ./backend:/mikochi
       - ./data:/data
