--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,8 +6,6 @@ mikochi:
   username: "root"
   password: "pass"
 
-replicaCount: 1
-
 image:
   repository: zer0tonin/mikochi
   pullPolicy: IfNotPresent
@@ -41,11 +39,7 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
+  hosts: []
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
