Fix login document title

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "short_name": "frontend",
+  "name": "Mikochi",
+  "short_name": "Mikochi",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
