--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,26 @@
 {
-  "private": true,
-  "name": "Mikochi",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "build": "preact build",
-    "serve": "sirv build --port 5000 --cors --single --host 0.0.0.0",
-    "dev": "preact watch -p 5000",
-    "lint": "eslint src",
-    "fix-lint": "eslint --fix src",
-    "test": "jest",
-    "format": "prettier --write .",
-    "unimported": "unimported"
-  },
-  "eslintConfig": {
-    "extends": [
-      "preact",
-      "prettier"
-    ],
-    "ignorePatterns": [
-      "build/"
-    ]
-  },
-  "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^4.0.0",
-    "eslint": "^8.30.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "jest": "^27.0.0",
-    "jest-preset-preact": "^4.0.5",
-    "preact-cli": "^3.5.0",
-    "prettier": "2.8.7",
-    "sirv-cli": "^2.0.2",
-    "unimported": "^1.26.0"
-  },
-  "dependencies": {
-    "preact": "^10.18.1",
-    "preact-render-to-string": "5.1.9",
-    "preact-router": "^4.1.2"
-  },
-  "jest": {
-    "preset": "jest-preset-preact",
-    "setupFiles": [
-      "<rootDir>/tests/__mocks__/browserMocks.js",
-      "<rootDir>/tests/__mocks__/setupTests.js"
-    ]
-  }
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite --host 0.0.0.0 --port 5000",
+		"build": "vite build",
+		"format": "prettier --write .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"preact": "^10.13.1",
+		"preact-iso": "^2.3.2",
+		"preact-render-to-string": "^6.3.1"
+	},
+	"devDependencies": {
+		"@preact/preset-vite": "^2.5.0",
+		"eslint": "^8.56.0",
+		"eslint-config-preact": "^1.3.0",
+		"eslint-config-prettier": "^9.1.0",
+		"prettier": "^3.2.1",
+		"vite": "^4.3.2"
+	},
+	"eslintConfig": {
+		"extends": "preact"
+	}
 }
