--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,22 +5,28 @@
     "dev": "vite --host 0.0.0.0 --port 5000",
     "build": "vite build",
     "format": "prettier --write .",
+    "lint": "eslint --ext .jsx src",
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.13.1",
-    "preact-iso": "^2.3.2",
+    "preact": "^10.20.2",
+    "preact-iso": "^2.6.2",
     "preact-render-to-string": "^6.3.1"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
-    "eslint": "^8.56.0",
+    "@preact/preset-vite": "^2.8.2",
+    "eslint": "^8.57.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.1",
-    "vite": "^4.3.2"
+    "prettier": "^3.2.5",
+    "vite": "^4.5.3"
   },
   "eslintConfig": {
-    "extends": "preact"
+    "extends": "preact",
+    "settings": {
+      "jest": {
+        "version": 27
+      }
+    }
   }
 }
