--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.20.2",
-    "preact-iso": "^2.6.2",
-    "preact-render-to-string": "^6.3.1"
+    "preact": "^10.22.0",
+    "preact-iso": "^2.6.3",
+    "preact-render-to-string": "^6.5.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
     "eslint": "^8.57.0",
-    "eslint-config-preact": "^1.3.0",
+    "eslint-config-preact": "^1.4.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
+    "eslint-plugin-compat": "^5.0.0",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.3.2",
     "vite": "^4.5.3"
   },
   "eslintConfig": {
