Update chart and readme

--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -53,6 +53,8 @@ spec:
                 secretKeyRef:
                   name: {{ include "Mikochi.fullname" . }}
                   key: password
+            - name: PASSWORD
+              value: {{ .Values.mikochi.gzip }}
           volumeMounts:
             - name: mikochi-data
               mountPath: "/data"
