--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ events{
 http {
     server {
         listen 80;
+        client_max_body_size 1024M;
 
         location /api {
             proxy_pass http://dev-backend:4000;
