--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals": "^2.5.0",
     "preact": "^10.26.5",
     "preact-iso": "^2.9.1",
     "preact-render-to-string": "^6.5.13"
