--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.25'
+          cache-dependency-path: "backend/go.sum"
       - name: Run go fmt
         run: |
           cd backend
