--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.mikochi.username .Values.mikochi.password }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,3 +9,4 @@ type: Opaque
 data:
   username: {{ .Values.mikochi.username | b64enc }}
   password: {{ .Values.mikochi.password | b64enc }}
+{{- end }}
