Fix secret name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
@@ -43,10 +43,10 @@ jobs:
 
       - name: Upload tar.gz builds to release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           RELEASE_ID=${{ steps.create_release.outputs.id }}
 
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm/v7 -v $(PWD)/tar-upload.sh:/tar-upload.sh -it zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm64 -v $(PWD)/tar-upload.sh:/tar-upload.sh -it zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/amd64 -v $(PWD)/tar-upload.sh:/tar-upload.sh -it zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GH_TOKEN} --platform linux/arm/v7 -v $(PWD)/tar-upload.sh:/tar-upload.sh -it zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GH_TOKEN} --platform linux/arm64 -v $(PWD)/tar-upload.sh:/tar-upload.sh -it zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GH_TOKEN} --platform linux/amd64 -v $(PWD)/tar-upload.sh:/tar-upload.sh -it zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
