--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,9 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set up QEMU for docker
+        uses: docker/setup-qemu-action@v2
+
       - name: Build and push Docker images
         uses: docker/build-push-action@v4
         with:
@@ -62,6 +65,6 @@ jobs:
         run: |
           RELEASE_ID=${{ steps.create_release.outputs.id }}
 
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GH_TOKEN} --platform linux/arm/v7 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GH_TOKEN} --platform linux/arm64 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GH_TOKEN} --platform linux/amd64 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm/v7 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm64 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/amd64 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
