Trying some docker architecture fixes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,5 +66,5 @@ jobs:
           RELEASE_ID=${{ steps.create_release.outputs.id }}
 
           docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm/v7 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
-          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm64 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
+          docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/arm64/v8 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
           docker run --env RELEASE=${RELEASE_ID} --env GITHUB_TOKEN=${GITHUB_TOKEN} --platform linux/amd64 -v ${{ github.workspace }}/tar-upload.sh:/tar-upload.sh zer0tonin/mikochi:latest /bin/bash /tar-upload.sh
