--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,8 @@ jobs:
           echo "GOOS=linux" >> $GITHUB_ENV
 
       - name: Build backend
-        run: go build -v -o ./backend/mikochi-${{ matrix.platform }} backend
+        working-directory: ./backend
+        run: go build -v -o ./mikochi-${{ matrix.platform }} .
 
       - name: Upload backend
         uses: actions/upload-artifact@v4
