--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: backend-build
-          path: ./backend/mikochi-*
+          path: ./backend/mikochi-${{ matrix.platform }}
 
   build-frontend:
     runs-on: ubuntu-latest
