--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -157,8 +157,9 @@ jobs:
         run: |
           mkdir -p release-files
           mkdir -p temp-release/mikochi-${{ github.ref_name }}/
+          mkdir -p temp-release/mikochi-${{ github.ref_name }}/static
           cp backend/mikochi temp-release/mikochi-${{ github.ref_name }}/mikochi
-          cp -r frontend/dist/* temp-release/mikochi-${{ github.ref_name }}/
+          cp -r frontend/dist/* temp-release/mikochi-${{ github.ref_name }}/static
           tar -czf "release-files/mikochi-${{ github.ref_name }}-linux-${{ matrix.platform }}.tar.gz" -C temp-release .
           rm -rf temp-release/mikochi-${{ github.ref_name }}/
 
