--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,10 @@ jobs:
   release-docker:
     needs: [build-backend, build-frontend]
 
+    strategy:
+      matrix:
+        platform: [amd64, arm64, armv7]
+
     runs-on: ubuntu-latest
 
     steps:
@@ -88,6 +92,12 @@ jobs:
         with:
           name: frontend-build
           path: ./frontend/dist/
+
+      - name: Download backend build
+        uses: actions/download-artifact@v7
+        with:
+          name: backend-build-${{ matrix.platform }}
+          path: ./backend
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -105,7 +115,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/${{ matrix.platform == 'amd64' && 'amd64' || matrix.platform == 'arm64' && 'arm64' || 'arm/v7' }}
           push: true
           tags: |
             zer0tonin/mikochi:latest
