--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,7 +100,7 @@ jobs:
           path: ./backend
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -118,8 +118,39 @@ jobs:
           platforms: linux/${{ matrix.platform == 'amd64' && 'amd64' || matrix.platform == 'arm64' && 'arm64' || 'arm/v7' }}
           push: true
           tags: |
-            zer0tonin/mikochi:latest
-            zer0tonin/mikochi:${{ github.ref_name }}
+            zer0tonin/mikochi:latest-${{ matrix.platform }}
+            zer0tonin/mikochi:${{ github.ref_name }}-${{ matrix.platform }}
+
+  create-multiarch-manifest:
+    needs: [release-docker]
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Create and Push Multi-Arch Manifest for Version Tag
+        run: |
+          docker buildx imagetools create \
+            -t "zer0tonin/mikochi:${{ github.ref_name }}" \
+            "zer0tonin/mikochi:${{ github.ref_name }}-amd64" \
+            "zer0tonin/mikochi:${{ github.ref_name }}-arm64" \
+            "zer0tonin/mikochi:${{ github.ref_name }}-armv7"
+
+      - name: Create and Push Multi-Arch Manifest for Latest Tag
+        run: |
+          docker buildx imagetools create \
+            -t "zer0tonin/mikochi:latest" \
+            "zer0tonin/mikochi:latest-amd64" \
+            "zer0tonin/mikochi:latest-arm64" \
+            "zer0tonin/mikochi:latest-armv7"
 
   release-github:
     needs: [build-backend, build-frontend]
